tools/gd/src/snapshots/gd__pager__tests__a_still_toggles_single_file.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 0,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "All files",
    full_context: false,
    visual_anchor: 0,
}
