tools/gd/src/snapshots/gd__pager__tests__key_D_at_last_file_is_noop.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 66,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 2,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
