tools/gd/src/snapshots/gd__pager__tests__key_D_shows_file_status_message.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 11,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "File 2/3 · b.rs",
    full_context: false,
    visual_anchor: 0,
}
