tools/gd/src/snapshots/gd__pager__tests__key_G_in_tree_last_entry.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 60,
    top_line: 60,
    active_file: None,
    tree_visible: true,
    tree_focused: true,
    tree_cursor: 2,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
