tools/gd/src/snapshots/gd__pager__tests__key_U_no_active_file_stuck_cursor.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "File 1/3 · a.rs",
    full_context: false,
    visual_anchor: 0,
}
