tools/gd/src/snapshots/gd__pager__tests__key_a_toggles_on_single_file.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: Some(
        0,
    ),
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "Single file",
    full_context: false,
    visual_anchor: 0,
}
