tools/gd/src/snapshots/gd__pager__tests__key_ctrl_u_single_file_clamps_to_file_start.snap
---
source: gd/src/pager.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 30,
    active_file: Some(
        1,
    ),
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "",
    full_context: false,
    visual_anchor: 0,
}
